ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-10-15 Benedikt Heintel
	- LANGUAGES:
		* Updated Catalan
		* Updated Polish

2009-10-11 Benedikt Heintel
	- LANGUAGES:
		* Updated Japanese
		* Updated German (Germany)

2009-10-06 Laurent Declercq
	- CONFIGS:
		* Fixed: Pma - impossible indirect connections with suhosin

2009-10-05 Laurent Declercq
	- TOOLS:
		* Fixed #2014: Error when you open pma via link from the customer interface

2009-10-05 Benedikt Heintel
	- LANGUAGES:
		* Updated Japanese
		* Updated Spanish (Spain)

2009-09-30 Daniel Andreca
	- LANGUAGES:
		* Updated Finnish
	- CONFIGS:
		* Updated database structure


2009-09-30 Laurent Declercq
	- TOOLS:
		* Fixed some typo errors in webmail/src/login.php (Thx to Henriks)

2009-09-29 Daniel Andreca
	- ENGINE:
		* Fixed #2011: Daily quota script generates errors (missing db in /var/lib/mysql)
	- LANGUAGES:
		* Updated Danish

2009-09-29 Laurent Declercq
	- CONFIG:
		* Fixed #2002: openSUSE 11.1 - Unable to add mail user
		* Fixed SASL Authentication failed (openSUSE):
			- Added smtpd.conf configuration file for postfix/sasl
			- Added new variables related to MTA/SASL in /etc/ispcp/ispcp.conf (openSUSE)
	- DISTS:
		* Fixed postfix warning: "not owned by root: /var/spool/postfix" (openSUSE)
		* Fixed imapd warning related to famd (See http://www.courier-mta.org/FAQ.html#fam) (openSUSE)
		* Fixed authdaemond warning related to missing modules: "file not found" (openSUSE)
	- DOCS:
		* Updated docs/OpenSuse/install file
		* Removed support for older versions (only current stable version is supported) (openSUSE)

2009-09-28 Daniel Andreca
	- LANGUAGES:
		* Fixed small typo in es_ES.po

2009-09-27 Daniel Andreca
	- GUI:
		* Fixed #1974: Reseller properties cannot be edited after working with his domains
	- ENGINE:
		* Fixed #2009: Backups do not work

2009-09-27 Christian Hernmarck
	- ENGINE:
		* Fixed #2008: Alias + Subdomain + SubAlias: not all placeholders filled

2009-09-25 Christian Hernmarck