@@ -558,15 +558,16 @@ function get_user_props($user_id) {
 } // end of get_user_props();
 
 function rsl_full_domain_check($data) {
+
 	$data .= '.';
 	$match = array();
-	$last_match = array();
 
-	$res = preg_match_all("/([^\.]*\.)/",
-		$data,
-		$match,
-		PREG_PATTERN_ORDER
-		);
+	$res = preg_match_all(
+							"/([^\.]*\.)/",
+							$data,
+							$match,
+							PREG_PATTERN_ORDER
+	);
 
 	if ($res == 0) return 0;
 
@@ -580,10 +581,7 @@ function rsl_full_domain_check($data) {
 		}
 	}
 
-	$res = preg_match("/^[A-Za-z][A-Za-z0-9]*[A-Za-z]\.$/",
-		$match[0][$last],
-		$last_match
-		);
+	$res = preg_match("/^[A-Za-z][A-Za-z0-9]*[A-Za-z]\.$/", $match[0][$last]);
 
 	return ($res == 0) ? 0 : 1;
 } // end of full_domain_check()
